--- a/web1/src/app/inventory/pre-order/pre-order.component.html
+++ b/web1/src/app/inventory/pre-order/pre-order.component.html
@@ -337,7 +337,7 @@
                                 <div *ngIf="addOrderPrice" class="col-xl-1 col-lg-1 col-md-2 col-4 mb-0 ml-auto">
                                     <button *ngIf="editBtn === false" class="mr-3" type="submit" mat-raised-button
                                         color="primary"
-                                        [disabled]="!f.valid && this.GstTypeDis"
+                                        [disabled]="!f.valid || this.GstTypeDis"
                                         mat-raised-button color="primary">Add</button>
                                     <button *ngIf="editBtn === true" class="mr-3" type="submit"
                                         [disabled]="item.Quantity == 0" mat-raised-button color="primary"
