--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -19,8 +19,8 @@
 </style>
 <body>
     <% if(data.length !==0){ data.forEach(function (i, index) { %>
-        <% if (data.CompanyBarcode == 5){%>
-            <% if (data.CompanyID == 20 || data.CompanyID == 19 && data.CompanyID !== 64){%>
+        <% if (data.CompanyBarcode == 5 ){%>
+            <% if (data.CompanyID == 20 || data.CompanyID == 19 && data.CompanyID !== 64 && data.CompanyID !== 163){%>
                 <table style="margin-left: -10px; margin-top: -9px; ">
                     <tr>
                         <th  style="width: 140px; padding: 0;">
@@ -61,7 +61,7 @@
                 </table>
                  <%}%>
 
-                 <% if (data.CompanyID == 64 ){%> 
+                 <% if (data.CompanyID == 64 && data.CompanyID !== 163 ){%> 
                     <table style="margin-left: -10px; margin-top: 0px;  ">
                         <tr>
                             <th  style="width: 180px; padding: 0;">
@@ -108,7 +108,7 @@
                     </table>
                     <%}%>
 
-                 <% if (data.CompanyID !== 20 && data.CompanyID !== 19 && data.CompanyID !== 64){%> 
+                 <% if (data.CompanyID !== 20 && data.CompanyID !== 19 && data.CompanyID !== 64 && data.CompanyID !== 163){%> 
             <table style="margin-left: -10px; margin-top: -9px; ">
                 <tr>
                     <th  style="width: 140px; padding: 0;">
@@ -163,6 +163,47 @@
                 </tr>
             </table>
             <%}%>
+
+            <% if (data.CompanyID == 163){%> 
+                <table style="margin-left: -10px; margin-top: -9px; ">
+                    <tr>
+                        <th  style="width: 140px; padding: 0;">
+                            <div
+                                style="font-size: 16px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
+                                <%=i.BarcodeName%>
+                            </div>
+                            <div>
+                                <svg class="barcode" jsbarcode-format="CODE128" jsbarcode-value="<%=i.Barcode%>"
+                                    jsbarcode-textmargin="0" jsbarcode-height="45" jsbarcode-marginTop="-15"
+                                    jsbarcode-fontSize="15" jsbarcode-marginBottom="0" jsbarcode-width="2"
+                                    jsbarcode-fontoptions="bold">
+                                </svg>
+                                <script>
+                                    JsBarcode(".barcode").init();
+                                </script>
+                            </div>
+                        </th>
+                        <th  style="width: 250px;">
+                           
+                            <div 
+                                style="text-align: left; font-size: 22px; font-weight: 600; font-family: verdana; letter-spacing: 0px; margin-left: 18px;">
+                                <% if (data.MRPHide == 'true' ){%>
+                                    MRP  <%=i.RetailPrice%>  
+                                  <%}%>         
+                            </div>
+                            <div style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;">
+                                 <%=i.ProductBrandName%>
+                            </div>
+    
+                            <div
+                            style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;height: 43px;">
+                            Mkd By Eystella <br> International Pvt.Ltd
+                        </div>
+                        </th>
+                    </tr>
+                </table>
+                <%}%>
+
             <%}%>
                 <%})}%>
 </body>
