--- a/web1/src/app/admin/company.component.html
+++ b/web1/src/app/admin/company.component.html
@@ -230,8 +230,9 @@
                                                     <mat-label>Code</mat-label>
                                                     <mat-select name="Code" [(ngModel)]="data.Code"
                                                         #Codecontrol [disabled]="user?.UserGroup !== 'SuperAdmin'">
-                                                        <mat-option value="91">91 india</mat-option>
-                                                        <mat-option value="971">971 dubai</mat-option>
+                                                        <mat-option value="91">91 India</mat-option>
+                                                        <mat-option value="971">971 Dubai</mat-option>
+                                                        <mat-option value="968">968 Oman</mat-option>
                                                     </mat-select>
                                                     <mat-error>
                                                         Select Valid Code
