--- a/web1/src/app/common/common.component.html
+++ b/web1/src/app/common/common.component.html
@@ -45,7 +45,7 @@
           <!-- SuperAdmin end nav-->
 
           <!-- CompanyAdmin start nav-->
-          <a *ngIf="user?.UserGroup !== 'SuperAdmin'" (click)="openModal(content)"><i class="fas fa-search"></i></a>
+          <a *ngIf="user?.UserGroup !== 'SuperAdmin'" (click)="openModal(content1)" ><i class="fas fa-search"></i></a>
           <a *ngIf="user?.UserGroup !== 'SuperAdmin'" [routerLink]="['/admin/CompanyDashborad']" (click)="myFunctionS('A0')">Dashboard</a>
           <!-- companyadmin  Administration -->
           <div *ngIf="user?.UserGroup !== 'SuperAdmin'" class="dropdown" (click)="myFunctionS('A')" >
@@ -269,7 +269,7 @@
     </div>
   </div>
   <!-- model detail-->
-<ng-template #content role="document" let-modal>
+<ng-template #content1 role="document" let-modal>
   <div class="modal-header p-2 row" style="height: 50px;">
      <div class="col-3">
        <h2 class="modal-title header pt-2" id="exampleModalLabel">Search</h2>
