--- a/server/views/NavjyotiOther.ejs
+++ b/server/views/NavjyotiOther.ejs
@@ -154,11 +154,11 @@
                </tr>
                <tr>
                   <th style="text-align: left; width: 20%;"> Age </th>
-                  <td>: <%=data.customer.MobileNo1%></td>
+                  <td>: <%=data.customer.Age%></td>
                </tr>
                <tr>
                   <th style="text-align: left; width: 20%;">Address</th>
-                  <td>: <%=data.customer.Age%></td>
+                  <td>: <%=data.customer.Address%></td>
                </tr>
             </thead>
          </table>
