--- a/web1/src/app/inventory/search-barcode/search-barcode.component.html
+++ b/web1/src/app/inventory/search-barcode/search-barcode.component.html
@@ -160,13 +160,13 @@
                                                             [ngModelOptions]="{standalone: true}" name="data{{i}}">
                                                             <option value="Available">Available</option>
                                                             <option value="Sold">Sold</option>
-                                                            <option value="Pre Order">Pre Order</option>
+                                                            <!-- <option value="Pre Order">Pre Order</option> -->
                                                             <option value="Lost/Stolen">Lost/Stolen</option>
                                                             <option value="Damaged">Damaged</option>
-                                                            <option value="Customer Return">Customer Return </option>
-                                                            <option value="Return To Supplier">Return To Supplier
-                                                            </option>
-                                                            <option value="Transfer Pending">Transfer Pending </option>
+                                                            <!-- <option value="Customer Return">Customer Return </option> -->
+                                                            <!-- <option value="Return To Supplier">Return To Supplier
+                                                            </option> -->
+                                                            <!-- <option value="Transfer Pending">Transfer Pending </option> -->
                                                         </select>
                                                     </td>
                                                     <td *ngIf="!UpdateBarcode"> {{data.Barcode}}</td>
