--- a/server/views/invoice.ejs
+++ b/server/views/invoice.ejs
@@ -542,7 +542,7 @@
             </div>
             <%}%>
             <%}%>
-            <% if (data.company.ID === 93){%>
+            <% if (data.company.ID === 93 || data.company.ID === 195){%>
             <div style="width: 100%; height: 50px; margin-top: 10px;">
                 <table style="width:30%; float:right">
                     <thead>
