--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -287,6 +287,8 @@
                                                             (click)="openModal(Spectacles)">EXTRA</b> -->
                                                         <b class="extra m-0" style="padding: 2px; cursor: pointer;"
                                                         (click)="NewVisit('spectacle')">New Visit</b>
+
+                                                        
                                                     </div>
                                                     <div class="col-md-2 col-3">
                                                         <span class="right_letf">Right Eye</span>
@@ -729,13 +731,14 @@
                                                                 [(ngModel)]="spectacle.VertexDistance" />
                                                         </mat-form-field>
                                                     </div>
-                                                    <div class="col-md-1 col-3 p-md-0">
+                                                    <div class="col-md-2 col-3 p-md-0">
                                                         <mat-form-field class="example-full-width mb-0">
-                                                            <mat-label>RefractiveIn</mat-label>
-                                                            <input matInput name="RefractiveIndex"
-                                                                [(ngModel)]="spectacle.RefractiveIndex" />
+                                                            <mat-label>VisitDate</mat-label>
+                                                            <input matInput name="VisitDatespectacle" type="date" [(ngModel)]="spectacle.VisitDate"
+                                                               >
                                                         </mat-form-field>
                                                     </div>
+                                                    
                                                    
                                                 </div>
 
@@ -1296,13 +1299,14 @@
                                                                 [(ngModel)]="clens.L_Diameter" />
                                                         </mat-form-field>
                                                     </div>
-                                                    <div class="col-md-1 col-3 p-md-0 pe-3">
+                                                    <div class="col-md-2 col-3 p-md-0">
                                                         <mat-form-field class="example-full-width mb-0">
-                                                            <mat-label>Modality</mat-label>
-                                                            <input matInput name="Modality"
-                                                                [(ngModel)]="clens.Modality" />
+                                                            <mat-label>VisitDate</mat-label>
+                                                            <input matInput name="VisitDateclens" type="date" [(ngModel)]="clens.VisitDate"
+                                                               >
                                                         </mat-form-field>
                                                     </div>
+                                                  
                                                 </div>
 
                                                 <!-- tbl list contact start -->
@@ -1548,6 +1552,13 @@
                                                             <mat-label>Operation</mat-label>
                                                             <textarea rows="1" matInput name="Operation"
                                                                 [(ngModel)]="other.Operation" ></textarea>
+                                                        </mat-form-field>
+                                                    </div>
+                                                    <div class="col-md-3 col-12 ">
+                                                        <mat-form-field class="example-full-width mb-0">
+                                                            <mat-label>VisitDate</mat-label>
+                                                            <input matInput name="VisitDateoTHER" type="date" [(ngModel)]="other.VisitDate"
+                                                               >
                                                         </mat-form-field>
                                                     </div>
                                                 </div>
@@ -1799,6 +1810,13 @@
                                                 </div>
                                                 <div class="col-xl-3 col-lg-3  col-md-6 col-sm-6 col-6 mb-0">
                                                     <mat-form-field class="example-full-width mb-0">
+                                                        <mat-label>RefractiveIn</mat-label>
+                                                        <input matInput name="RefractiveIndex"
+                                                            [(ngModel)]="spectacle.RefractiveIndex" />
+                                                    </mat-form-field>
+                                                </div>
+                                                <div class="col-xl-3 col-lg-3  col-md-6 col-sm-6 col-6 mb-0">
+                                                    <mat-form-field class="example-full-width mb-0">
                                                         <mat-label>Frame</mat-label>
                                                         <input matInput name="Frame" [(ngModel)]="spectacle.Frame" />
                                                     </mat-form-field>
@@ -1913,6 +1931,13 @@
                                                     <mat-form-field class="example-full-width mb-0">
                                                         <mat-label>BR</mat-label>
                                                         <input matInput name="BR" [(ngModel)]="clens.BR" />
+                                                    </mat-form-field>
+                                                </div>
+                                                <div class="col-xl-2 col-lg-2  col-md-6 col-sm-6 col-6 mb-0">
+                                                    <mat-form-field class="example-full-width mb-0">
+                                                        <mat-label>Modality</mat-label>
+                                                        <input matInput name="Modality"
+                                                            [(ngModel)]="clens.Modality" />
                                                     </mat-form-field>
                                                 </div>
                                                 <div class="col-xl-2 col-lg-2  col-md-6 col-sm-6 col-6 mb-0">
