--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -200,12 +200,15 @@
                         </div>
                       </div>
                       <!--  spec end -->
-                      <div class="col-xl-2 col-lg-4 col-md-6 col-12 mb-0 ">
-                        <button class="me-2" type="submit" mat-raised-button color="primary">
+                      <div class="col-xl-3 col-lg-4 col-md-6 col-12 mb-0 ">
+                        <button  type="submit" mat-raised-button color="primary">
                           Search
                         </button>
-                        <button type="button" mat-raised-button color="warn" (click)="inventorysFromReset()">
+                        <button class="me-2 ms-2" type="button" mat-raised-button color="warn" (click)="inventorysFromReset()">
                           Reset
+                        </button>
+                        <button type="button" mat-raised-button color="warn" (click)="inventoryAll()">
+                          All Stock
                         </button>
                        
                       </div>
@@ -385,6 +388,261 @@
                             <td *ngIf="columnVisibility.WholeSalePrice"                                   >{{s.WholeSalePrice }}</td>
                             <td *ngIf="columnVisibility.WholeSaleTotal"                                   >{{s.WholeSalePrice * s.Count}}</td>
                           </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </mat-tab>
+              <!-- opening/closing stock (QTY) -->
+              <mat-tab *ngIf="viewInventoryReport" label="Opening/closing stock (QTY)">
+                <div class="body">
+                  <form class="p-3 pb-0" #f1="ngForm">
+                    <div class="row" >
+                      <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>From</mat-label>
+                          <input matInput name="FromDate" type="date" [(ngModel)]="QtyStock.FromDate" #Fromcontrol >
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>To</mat-label>
+                          <input matInput type="date" name="ToDate" [(ngModel)]="QtyStock.ToDate" #Tocontrol>
+                        </mat-form-field>
+                      </div>
+                     
+                      <div class="col-xl-2 col-lg-2 col-md-4 col-12 mb-0">
+                        <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup === 'CompanyAdmin'">
+                          <mat-label>Shop Name</mat-label>
+                          <mat-select name="ShopID" [(ngModel)]="QtyStock.ShopID" multiple>
+                            <mat-option [value]=0>All</mat-option>
+                            <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
+                              <span [style.color]="'blue'" *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                        <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup !== 'CompanyAdmin'">
+                          <mat-label>Shop Name</mat-label>
+                          <mat-select name="ShopID" [(ngModel)]="QtyStock.ShopID" >
+                            <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
+                              <span [style.color]="'blue'" *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0">
+                        <button class="me-3" mat-raised-button color="primary">Search</button>
+                        <button type="button" mat-raised-button color="warn">Reset</button>
+                      </div>
+                    </div>
+                  </form>
+                  <!-- list -->
+                  <div class="body p-2">
+                    <div id="QtyStockExcel-content" class="col-sm-12" style="overflow: auto; height: 450px;">
+                      <table class="table table-striped table-hover table-sm table-bordered"
+                        style="border: 2px solid #fff !important;" id="QtyStockExcel">
+                        <thead>
+                          <tr style="white-space: nowrap;">
+                            <th>S.No</th>
+                            <th>Date</th>
+                            <th>OpeningStock</th>
+                            <th>AddPurchase </th>
+                            <th>AddPreOrderPurchase</th>
+                            <th>DeletePurchase</th>
+                            <th>AddSale</th>
+                            <th>DeleteSale</th>
+                            <th>AddPreOrderSale</th>
+                            <th>DeletePreOrderSale</th>
+                            <th>OtherDeleteStock</th>
+                            <th>InitiateTransfer</th>
+                            <th>CancelTransfer</th>
+                            <th>AcceptTransfer</th>
+                            <th>ClosingStock</th>
+                            <th>ShopName</th>
+                          </tr>
+                          <tr class="totolRow">
+                            <td>
+                              <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" (click)="exportAsXLSXQtyStock()" aria-hidden="true" type="button">
+                              </i>
+                              <button class="bg_none ms-4"  >
+                                <i class="far fa-file-pdf " (click)="print('QtyStockExcel-content')"
+                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                            </button>
+                            </td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                          </tr>
+                        </thead>
+                        <tbody class="text-center">
+                            <tr>
+                              <td>1</td>
+                              <td>20-04-2024</td>
+                              <td>200</td>
+                              <td>50</td>
+                              <td>10</td>
+                              <td>0</td>
+                              <td>20</td>
+                              <td>0</td>
+                              <td>10</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>230</td>
+                              <td>ABC optical</td>
+                            </tr>
+                            <tr>
+                              <td>2</td>
+                              <td>21-04-2024</td>
+                              <td>230</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>10</td>
+                              <td>1</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>219</td>
+                              <td>ABC optical</td>
+                            </tr>
+                            <tr>
+                              <td>3</td>
+                              <td>22-04-2024</td>
+                              <td>219</td>
+                              <td>10</td>
+                              <td>0</td>
+                              <td>5</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>224</td>
+                              <td>ABC optical</td>
+                            </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </mat-tab>
+              <!-- opening/closing stock (AMT) -->
+              <mat-tab *ngIf="viewInventoryReport" label="Opening/closing stock (AMT)">
+                <div class="body">
+                  <form class="p-3 pb-0" #f1="ngForm">
+                    <div class="row" >
+                      <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>From</mat-label>
+                          <input matInput name="FromDate" type="date" [(ngModel)]="AmtStock.FromDate" #Fromcontrol >
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>To</mat-label>
+                          <input matInput type="date" name="ToDate" [(ngModel)]="AmtStock.ToDate" #Tocontrol>
+                        </mat-form-field>
+                      </div>
+                     
+                      <div class="col-xl-2 col-lg-2 col-md-4 col-12 mb-0">
+                        <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup === 'CompanyAdmin'">
+                          <mat-label>Shop Name</mat-label>
+                          <mat-select name="ShopID" [(ngModel)]="AmtStock.ShopID" multiple>
+                            <mat-option [value]=0>All</mat-option>
+                            <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
+                              <span [style.color]="'blue'" *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                        <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup !== 'CompanyAdmin'">
+                          <mat-label>Shop Name</mat-label>
+                          <mat-select name="ShopID" [(ngModel)]="AmtStock.ShopID" >
+                            <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
+                              <span [style.color]="'blue'" *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0">
+                        <button class="me-3" mat-raised-button color="primary">Search</button>
+                        <button type="button" mat-raised-button color="warn">Reset</button>
+                      </div>
+                    </div>
+                  </form>
+                  <!-- list -->
+                  <div class="body p-2">
+                    <div id="ProductSummary-content" class="col-sm-12" style="overflow: auto; height: 450px;">
+                      <table class="table table-striped table-hover table-sm table-bordered"
+                        style="border: 2px solid #fff !important;" id="ProductSummaryExcel">
+                        <thead>
+                          <tr style="white-space: nowrap;">
+                            <th>S.No</th>
+                            <th>Date</th>
+                            <th>AmtOpeningStock</th>
+                            <th>AmtAddPurchase </th>
+                            <th>AmtAddPreOrderPurchase</th>
+                            <th>AmtDeletePurchase</th>
+                            <th>AmtAddSale</th>
+                            <th>AmtDeleteSale</th>
+                            <th>AmtAddPreOrderSale</th>
+                            <th>AmtDeletePreOrderSale</th>
+                            <th>AmtOtherDeleteStock</th>
+                            <th>AmtInitiateTransfer</th>
+                            <th>AmtCancelTransfer</th>
+                            <th>AmtAcceptTransfer</th>
+                            <th>AmtClosingStock</th>
+                            <th>ShopName</th>
+                          </tr>
+                          <tr class="totolRow">
+                            <td>
+                              <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button">
+                              </i>
+                              <button class="bg_none ms-4"  >
+                                <i class="far fa-file-pdf "
+                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                            </button>
+                            </td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                          </tr>
+                        </thead>
+                        <tbody class="text-center">
+
                         </tbody>
                       </table>
                     </div>
