--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -468,16 +468,16 @@
                             </button>
                             </td>
                             <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td>{{this.OpeningStock}}</td>
+                            <td>{{this.AddPurchase }}</td>
+                            <td>{{this.DeletePurchase}}</td>
+                            <td>{{this.AddSale}}</td>
+                            <td>{{this.DeleteSale}}</td>
+                            <td>{{this.OtherDeleteStock}}</td>
+                            <td>{{this.InitiateTransfer}}</td>
+                            <td>{{this.CancelTransfer}}</td>
+                            <td>{{this.AcceptTransfer}}</td>
+                            <td>{{this.ClosingStock}}</td>
                             <td></td>
                           </tr>
                         </thead>
@@ -578,16 +578,16 @@
                             </button>
                             </td>
                             <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td>{{this.AmtOpeningStock}}</td>
+                            <td>{{this.AmtAddPurchase }}</td>
+                            <td>{{this.AmtDeletePurchase}}</td>
+                            <td>{{this.AmtAddSale}}</td>
+                            <td>{{this.AmtDeleteSale}}</td>
+                            <td>{{this.AmtOtherDeleteStock}}</td>
+                            <td>{{this.AmtInitiateTransfer}}</td>
+                            <td>{{this.AmtCancelTransfer}}</td>
+                            <td>{{this.AmtAcceptTransfer}}</td>
+                            <td>{{this.AmtClosingStock}}</td>
                             <td></td>
                           </tr>
                         </thead>
