--- a/web1/src/app/inventory/inventory-summary/inventory-summary.component.html
+++ b/web1/src/app/inventory/inventory-summary/inventory-summary.component.html
@@ -33,6 +33,15 @@
                                 </div>
                                 <div class="col-xl-2 col-lg-2 col-md-3 col-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
+                                      <mat-label>Product search</mat-label>
+                                      <input matInput name="Productsearch" [(ngModel)]="Productsearch" #Productsearchcontrol required>
+                                      <mat-error>
+                                        Productsearch required
+                                      </mat-error>
+                                    </mat-form-field>
+                                  </div>
+                                <div class="col-xl-2 col-lg-2 col-md-3 col-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Select Product</mat-label>
                                         <mat-select name="FieldType" [(ngModel)]="data.ProductCategory"
                                             (selectionChange)="getFieldList()" required #Typecontrol>
