--- a/web1/src/app/inventory/search-barcode/search-barcode.component.html
+++ b/web1/src/app/inventory/search-barcode/search-barcode.component.html
@@ -11,15 +11,24 @@
                         <!-- form start -->
                         <form #f="ngForm" autocomplete="off" #f0="ngForm">
                             <div class="row">
-                                <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-3 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
-                                        <mat-label>Search By BarCode</mat-label>
+                                        <mat-label> BarCode</mat-label>
                                         <input matInput name="SearchBarCode" [(ngModel)]="SearchBarCode"
                                             (blur)="getBarcodeDataByBarcodeNo('search')" required
                                             #SearchBarCodecontrol #GSTNocontrol [autocomplete]="false"
                                             appAutoFoucsDirectives>
                                     </mat-form-field>
                                 </div>
+                                <div class="col-xl-2 col-lg-2 col-md-3 col-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                      <mat-label>Product search</mat-label>
+                                      <input matInput name="Productsearch" [(ngModel)]="Productsearch" #Productsearchcontrol required>
+                                      <mat-error>
+                                        Productsearch required
+                                      </mat-error>
+                                    </mat-form-field>
+                                  </div>
                                 <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Search By Product</mat-label>
