--- a/web1/src/app/report/purchase-report/purchase-report.component.html
+++ b/web1/src/app/report/purchase-report/purchase-report.component.html
@@ -304,6 +304,15 @@
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0">
                         <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Product search</mat-label>
+                          <input matInput name="Productsearch" [(ngModel)]="Productsearch" #Productsearchcontrol>
+                          <mat-error>
+                            Productsearch required
+                          </mat-error>
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0">
+                        <mat-form-field class="example-full-width mb-0">
                           <mat-label>Select Product</mat-label>
                           <mat-select name="FieldType" [(ngModel)]="PurchaseDetail.ProductCategory"
                             (selectionChange)="getFieldList()" required #Typecontrol>
