--- a/web1/src/app/report/transfer-product-report/transfer-product-report.component.html
+++ b/web1/src/app/report/transfer-product-report/transfer-product-report.component.html
@@ -79,6 +79,15 @@
                                             </mat-select>
                                         </mat-form-field>
                                     </div>
+                                    <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0">
+                                        <mat-form-field class="example-full-width mb-0">
+                                          <mat-label>Product search</mat-label>
+                                          <input matInput name="Productsearch" [(ngModel)]="Productsearch" #Productsearchcontrol>
+                                          <mat-error>
+                                            Productsearch required
+                                          </mat-error>
+                                        </mat-form-field>
+                                      </div>
                                     <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
                                         <mat-form-field class="example-full-width mb-0 paddingInp">
                                             <mat-label>Select Product</mat-label>
