--- a/server/views/customerPowerPDF.ejs
+++ b/server/views/customerPowerPDF.ejs
@@ -13,6 +13,8 @@
       }
     html body{
         zoom: 100%;
+        padding-top: 2%;
+        padding-left: 4%;
     }
 
     .TBLbLOD thead tr th {
