--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -104,9 +104,9 @@
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0">
                         <mat-form-field class="example-full-width mb-0">
                           <mat-label>StringProductName</mat-label>
-                          <input matInput name="StringProductName" [(ngModel)]="inventory.StringProductName" #StringProductNamecontrol>
+                          <input matInput name="Productsearch" [(ngModel)]="Productsearch" #StringProductNamecontrol>
                           <mat-error>
-                            StringProductName required
+                            Productsearch required
                           </mat-error>
                         </mat-form-field>
                       </div>
