--- a/web1/src/app/common/about/about.component.html
+++ b/web1/src/app/common/about/about.component.html
@@ -14,6 +14,18 @@
                         </div>
                         <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
                            <div class="col-12" style="font-size: 20px; line-height: 30px;">
+                               <h2 style="color: #ffea00;"> New Updates Date 27-04-2024 </h2>
+                               <P>1. Universal Language integration with WhatsApp messages. Now you can send sms in Hindi, Marathi, Arabic etc.</P>
+                               <p>2. Inventory Report- All stock buttons are added in the report. Click on all stock buttons and check your stock in a single click.</p>
+                               <p>3. Opening/Closing stock report merge in Inventory Report(amount wise/Qty wise) till 30 April report will be in testing mode. From 1 May 2024 will be working.</p>
+                               <p>4. Old Customer power Change date option added in customer page.</p>
+                               <p>5. You can make the lens price list easily with power. Call OPTICALGURU for this feature.</p>
+                                
+                             
+                            </div>
+                        </div>
+                        <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
+                           <div class="col-12" style="font-size: 20px; line-height: 30px;">
                                <h2 style="color: #ffea00;"> New Updates Date 19-02-2024 </h2>
                                <P>1. Customer Order Ready WhatsApp message integration.</P>
                                <P>Follow steps</P>
