--- a/web1/src/app/report/customer-report/customer-report.component.html
+++ b/web1/src/app/report/customer-report/customer-report.component.html
@@ -110,9 +110,9 @@
                                         <mat-label>Select Types</mat-label>
                                         <mat-select name="Type" [(ngModel)]="Type">
                                             <mat-option value="Customer">Customer</mat-option>
-                                            <mat-option value="spectacle_rx">spectacle_rx</mat-option>
-                                            <mat-option value="contact_lens_rx">contact_lens_rx</mat-option>
-                                            <mat-option value="other_rx">other_rx</mat-option>
+                                            <mat-option value="spectacle_rx">Spectacle_Rx</mat-option>
+                                            <mat-option value="contact_lens_rx">Contact_Lens_Rx</mat-option>
+                                            <mat-option value="other_rx">Other_Rx</mat-option>
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
