--- a/web1/src/app/common/common.component.html
+++ b/web1/src/app/common/common.component.html
@@ -171,8 +171,9 @@
               <a *ngIf="viewFlag.viewProductReturnReport" href="javascript:void(0)" [routerLink]="['/report/product-return']" id="collapseExample7">Product Return</a>
               <a *ngIf="viewFlag.viewSupplierCreditReport" href="javascript:void(0)" [routerLink]="['/report/supplierCredit']" id="collapseExample7">Supplier Credit</a>
               <a *ngIf="viewFlag.viewEyeTestReport" href="javascript:void(0)" [routerLink]="['/report/eyetest']"  id="collapseExample7">Eye Test</a>
-              <a *ngIf="viewFlag.viewLoyaltyReport" href="javascript:void(0)" (click)="ComingSoon()"  id="collapseExample7">Loyalty </a>
-              <a *ngIf="viewFlag.viewOldSaleReport" href="javascript:void(0)" [routerLink]="['/report/oldSale']" id="collapseExample7">Old Sale </a>
+              <a *ngIf="viewFlag.viewLoyaltyReport" href="javascript:void(0)" [routerLink]="['/report/loyality']"  id="collapseExample7">Loyalty </a>
+              <a *ngIf="viewFlag.viewOldSaleReport" href="javascript:void(0)" [routerLink]="['/report/oldSale']" id="collapseExample7">Old Sale </a> 
+
             </div>
           </div>
           <!-- companyadmin end report -->
