--- a/web1/src/app/admin/shop-list/shop-list.component.html
+++ b/web1/src/app/admin/shop-list/shop-list.component.html
@@ -29,6 +29,12 @@
                                         [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                                     </ngb-pagination>
                                 </div>
+                                <div class="col-md-1 col-5 ms-auto order-0 order-md-1">
+                                    <button type="button" mat-raised-button color="primary"  data-mdb-toggle="modal"
+                                    data-mdb-target="#exampleModal" (click)="openModal2(content2)" >
+                                         Customer Category
+                                    </button>
+                                </div>
                                 <div class="col-md-2 col-5 ms-auto order-0 order-md-1">
                                     <div class="input-group">
                                         <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search"
@@ -475,3 +481,75 @@
     </div>
 </ng-template>
 <!-- model popup ent -->
+
+<!-- Customer Category model -->
+<ng-template #content2 role="document" let-modal>
+    <div class="modal-header" style="height: 50px;">
+      <h2 class="modal-title header pt-2" id="exampleModalLabel" style="font-weight: 600;">Customer Category</h2>
+      <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body">
+        <form autocomplete="off" #f4="ngForm" >
+      <div class="row">
+        <div class="col-md-3 mb-0">
+         
+            <mat-form-field class="example-full-width mb-0">
+                <mat-label>Category</mat-label>
+                <mat-select name="CategoryID" [(ngModel)]="Category.CategoryID" required #Categorycontrol1>
+                  <mat-option [value]="p.ID" *ngFor="let p of CategoryList"> {{p.Name}} </mat-option>
+                </mat-select>
+              </mat-form-field>
+        </div>
+        <div class="col-md-3 mb-0">
+            <mat-form-field class="example-full-width mb-0">
+                <mat-label>From</mat-label>
+                <input matInput name="Fromm" type="number" [(ngModel)]="Category.Fromm" required #Frommcontrol >
+                <mat-error>
+                    From is required
+                </mat-error>
+            </mat-form-field>
+        </div>
+        <div class="col-md-3 mb-0">
+            <mat-form-field class="example-full-width mb-0">
+                <mat-label>Too</mat-label>
+                <input matInput name="Too" type="number" [(ngModel)]="Category.Too" required #Toocontrol >
+                <mat-error>
+                    Toois required
+                </mat-error>
+            </mat-form-field>
+        </div>
+        <div class="col-md-3 mb-0">
+            <button type="submit" (click)="categorySave()" mat-raised-button color="primary" [disabled]="!f4.valid" >
+                 save
+            </button>
+            <button class="ms-2 me-2" type="submit" (click)="deleteAll()" mat-raised-button color="warn"  >
+                Delete All
+            </button>
+        </div>
+      </div>
+    </form>
+    <div class="body ">
+        <div  class="col-sm-12" style="overflow: auto; height: 450px;">
+            <table  class="table table-striped table-hover table-sm table-bordered"
+                style="border: 2px solid #fff !important;" >
+                <thead>
+                    <tr style="white-space: nowrap;">
+                        <th>SNo.</th>
+                        <th>CategoryID</th>
+                        <th>From</th>
+                        <th>Too</th>
+                    </tr>
+                </thead>
+                <tbody class="text-center">
+                    <tr *ngFor="let data of CategoryLists; let i = index" text="left">
+                        <td>{{ i + 1 }}</td>
+                        <td>{{ data.CategoryID }}</td>
+                        <td>{{ data.Fromm }}</td>
+                        <td>{{ data.Too }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    </div>
+  </ng-template>
